    do not depend on Types anymore.
* WebUI:
  * Update: Updated to Dojo 1.9
  * Update: stalker.js is renamed to dialogs.js and it is now fully compatible
    with Dojo AMD.
  * Fix: Fixed fieldUpdater.js to work properly with Dojo 1.9 especially for
    MultiSelect widgets.
  * Fix: Separated the dialog and action routes for Structure.
  * Fix: Fixed unnecessary module imports in stalker.js.

0.2.0.b2
--------

* Stalker is now compatible with Python 2.6.
* SOM:
  * Task:
    * Update: Tasks now have a new attribute called ``watchers`` which holds a
      list of User instances watching the particular Task.
    * Update: Users now have a new attribute called ``watching`` which is a
      list of Task instances that this user is watching.
  * TimeLog:
    * Update: TimeLog instances will expand Task.schedule_timing value
      automatically if the total amount of logged time is more than the
      schedule_timing value.
    * Update: TimeLogs are now considered while scheduling the task.
    * Fix: TimeLogs raises OverBookedError when appending the same TimeLog
      instance to the same resource.
  * Auth:
    * Fix: The default ACLs for determining the permissions are now working
      properly.
* WebUI:
  * Fix: ``user_create_dialog`` now shows and updates groups.
  * Fix: Updating a project now correctly refreshes the ``project_summary``
    content pane.
  * Fix: Separated the dialog and action routes for ImageFormat.
  * Fix: Separated the dialog and action routes for Asset.
  * Fix: Separated the dialog and action routes for Repository.
  * Fix: The working hours were not correctly passed to the studio instance
    in Studio creation.
  * Fix: "Append User Dialog" is now working properly.
* Fix: Links between pages is created with redirectLink function which is
    written in base.jinja2. goToLink.js is deprecated, but still there are some
    codes that uses gotolink.js, they must be changed for next update.